--- a/addons/jys_tiktok/views/jys_tiktok_menu.xml
+++ b/addons/jys_tiktok/views/jys_tiktok_menu.xml
@@ -97,6 +97,11 @@
             name="Get Products"
             action="action_jys_tiktok_get_product"
             sequence="60"/>
+
+            <menuitem id="menu_jys_tiktok_get_logistic"
+            name="Get Logistic"
+            action="action_jys_tiktok_get_logistic"
+            sequence="70"/>
         </menuitem>
 
         <menuitem id="shop_menu_jys_tiktok"
