[IMP] l10n_it_edi: payment method
In this commit, we will add the italian payment method needed for the edi. For
that we added a selection field that can be filled with the payment method of
the payment or by manually choosing a value.

In the journal of bank, we can add some new payment method, by default the
italian payment method will be MP05.

In case of partial payment we choose to take the payment method of the first one.

task: 3770458

--- a/addons/l10n_it_edi/views/l10n_it_view.xml
+++ b/addons/l10n_it_edi/views/l10n_it_view.xml
@@ -148,6 +148,7 @@
                                 <field name="l10n_it_stamp_duty" readonly="state != 'draft'"/>
                                 <field name="l10n_it_ddt_id" readonly="state != 'draft'" invisible="move_type not in ('out_invoice', 'out_refund')"/>
                                 <field name="l10n_it_document_type"/>
+                                <field name="l10n_it_payment_method"/>
                             </group>
                             <field name="l10n_it_partner_pa" invisible="1"/>
                             <group invisible="not l10n_it_partner_pa">
