[FIX] website_forum: fix navbar padding post bootstrap migration
This commit fixes a visual issue about the forum navbar not having
a horizontal padding anymore, which is easily noticeable on when an item
has the `.active` class.

With the migration to Bootstrap v5.3, we need to scope our `.nav-link`
utility classes within a `.nav` one in order to inherit the CSS variables.

To handle this issue, we simply add the missing `.nav` utility class
and a `d-block` to override de `d-flex` sets by the utility class.

task-4009043

closes odoo/odoo#170587

Signed-off-by: Warnon Aurélien (awa) <awa@odoo.com>

--- a/addons/website_forum/views/forum_forum_templates_layout.xml
+++ b/addons/website_forum/views/forum_forum_templates_layout.xml
@@ -235,7 +235,7 @@
 <!-- User sidebar -->
 <template id="user_sidebar">
     <aside class="o_wforum_sidebar col-3 d-none d-lg-flex flex-column z-index-1">
-        <div class="flex-grow-1 px-2">
+        <div class="nav d-block flex-grow-1 px-2">
             <t t-call="website_forum.user_sidebar_header"/>
             <t t-call="website_forum.user_sidebar_body"/>
         </div>
