[IMP] mail: allow image deletion in composer on mobile
This PR removes the hover effect for touch device on attachment meaning:

* Touch device can now use the download button on image
* Touch device can now delete attachment images from the composer

closes odoo/odoo#170750

Signed-off-by: Alexandre Kühn (aku) <aku@odoo.com>

--- a/addons/mail/static/src/core/common/core.scss
+++ b/addons/mail/static/src/core/common/core.scss
@@ -141,3 +141,11 @@ a.o-discuss-mention {
         visibility: visible;
     }
 }
+
+// .o-opacity-hoberable class disable the opacity effect (see opacity-100-hover) on
+// device that dont support the hover effect (mainly touch device).
+@media (hover: none) {
+    .o-opacity-hoverable {
+        opacity: 100 !important;
+    }
+}
