[IMP] web: chat-dots-fill to chat-left-fill
The discuss icon is changed.

Stefano (sri)
> I'd suggest chat-left-fill 😇

task-3714335

--- a/addons/web/static/src/libs/fontawesome/css/font-awesome.css
+++ b/addons/web/static/src/libs/fontawesome/css/font-awesome.css
@@ -2221,8 +2221,8 @@ url("../fonts/bootstrap-icons.woff?dd67030699838ea613ee6dbda90effa6") format("wo
 	content : "\f24a";
 }
 .fa-comments:before {
-	/* corresponding to bi-chat-dots-fill -- good match -- used in the codebase */
-	content : "\f249";
+	/* corresponding to bi-chat-left-fill -- good match -- used in the codebase */
+	content : "\f24e";
 }
 .fa-comments-o:before {
 	/* corresponding to bi-chat-quote -- good match -- used in the codebase */
