[IMP] mail: move call setting into config
1. Add a sub-menu for "Voice & Video" in the "Configuration" menu,
as it is not channel related.
2. Remove call settings from each discuss thread
3. make sure these settings are still accessible in public page
and small devices

task-3984571

--- a/addons/mail/views/mail_menus.xml
+++ b/addons/mail/views/mail_menus.xml
@@ -19,6 +19,13 @@
         action="mail.discuss_notification_settings_action"
         sequence="1"
     />
+    <menuitem
+        id="mail.menu_call_settings"
+        name="Voice &amp; Video"
+        parent="mail.menu_configuration"
+        action="mail.discuss_call_settings_action"
+        sequence="5"
+    />
     <menuitem name="Canned Responses"
         id="mail.menu_canned_responses"
         parent="mail.menu_configuration"
