[IMP] website_event_track: smoothen talks page
Improve talks page in event frontend :

 - Sidebar now hides completed talks if ongoing or upcoming talks are available.
 - Automatically expand past days when filters return results in those days for
   quick access to past talk details.
 - Expose 'All Talks' and 'Favorites' shortcuts directly.
 - Keep search filter cross visible at all times.
 - Make the entire talk tile clickable, not just the title.

Task-4102026

closes odoo/odoo#178580

Related: odoo/upgrade#6481
Signed-off-by: Thibault Delavallee (tde) <tde@openerp.com>

--- a/addons/website_event/static/src/scss/event_templates_common.scss
+++ b/addons/website_event/static/src/scss/event_templates_common.scss
@@ -18,6 +18,9 @@ $o-wevent-color: $body-color;
         border: $border-width solid var(--o-border-color);
         border-left: $border-width * 3 solid var(--badge-border-color);
     }
+    a.o_wesession_list_item:hover {
+        background-color: #e9e9e9;
+    }
 
     /*
      * COMMON MENU STYLING
@@ -75,6 +78,11 @@ $o-wevent-color: $body-color;
             outline: 0;
             box-shadow: 0 0 0 0.25rem rgba(134, 102, 126, 0.5);
         }
+    }
+
+    input[type="search"]::-webkit-search-cancel-button {
+        display: block;
+        opacity: 1;
     }
 }
 
