--- a/addons/website/static/src/scss/website.scss
+++ b/addons/website/static/src/scss/website.scss
@@ -838,7 +838,7 @@ table.table_desc tr td {
 
 // Variables shared between carousel snippets and s_image_gallery
 $-o-carousel-indicators-dots-size: .75rem;
-$-o-carousel-controllers-size: map-get($spacers, 5);
+$-o-carousel-controllers-size: var(--CarouselControllers-size, #{map-get($spacers, 5)});
 
 %o_horizontal_controllers {
     @include media-breakpoint-up(md) {
@@ -1033,7 +1033,7 @@ $-o-carousel-controllers-size: map-get($spacers, 5);
         }
 
         &:not(.s_carousel_arrows_hidden) .carousel-indicators {
-            $-margin-x: map-get($spacers, 3) * 2 + $-o-carousel-controllers-size;
+            $-margin-x: calc(#{map-get($spacers, 3)} * 2 + #{$-o-carousel-controllers-size});
 
             min-height: $-o-carousel-controllers-size;
             margin: 0 $-margin-x map-get($spacers, 3);
