--- a/addons/l10n_in/views/account_move_line_views.xml
+++ b/addons/l10n_in/views/account_move_line_views.xml
@@ -5,10 +5,21 @@
         <field name="model">account.move.line</field>
         <field name="arch" type="xml">
             <list string="Products" editable="top" create="0">
+                <field name="move_id"
+                       optional="show"
+                       column_invisible="not context.get('send_and_print')"/>
                 <field name="product_id" readonly="1"/>
                 <field name="name" widget="section_and_note_text"/>
-                <field name="l10n_in_hsn_code"/>
-                <field name="tax_ids" widget="many2many_tax_tags" domain="[('type_tax_use', '=', 'sale')]"/>
+                <field name="l10n_in_hsn_code"
+                       optional="show"
+                       column_invisible="context.get('tax_validation') or context.get('restrict_negative_discount_line')"/>
+                <field name="tax_ids"
+                       optional="show"
+                       widget="many2many_tax_tags" domain="[('type_tax_use', '=', 'sale')]"
+                       column_invisible="not context.get('tax_validation', False)"/>
+                <field name="discount"
+                       optional="show"
+                       column_invisible="not context.get('restrict_negative_discount_line', False)"/>
             </list>
         </field>
     </record>
