[IMP] web: allow kanban record selection
This commit brings selection feature parity in Kanban compared to the similar
List view. It is now possible to select some records, by pressing the 'Alt' key
and clicking on the card. Once the selection mode is enabled after at least one
record is selected, it is possible to select more cards by clicking on them directly.

On touch devices, it is possible to select as well, by enabling the selection mode
after a long touch on a card. Once it is enabled, you can simply tap on cards to
add them too.

If the view does allow to drag and drop cards, the selection does not allow to move
the complete selection. In this case, we simply unselect all records selected.

With this task, we can also remove the necessity to support Archive/Unarchive all,
allowing us to also delete the corresponding tests. Archive feature is tested directly
on kanban cards with newer tests, and by adapting some existing tests.

Tests have been added for both touch and keyboard selection.

task-4318322

Part-of: odoo/odoo#194090
Related: odoo/enterprise#77329
Signed-off-by: Adrien Dieudonné (adr) <adr@odoo.com>

--- a/addons/web/static/src/views/kanban/kanban_controller.scss
+++ b/addons/web/static/src/views/kanban/kanban_controller.scss
@@ -115,6 +115,8 @@
 
     --KanbanColumn__highlight-background: #{tint-color($o-action, 90%)};
     --KanbanColumn__highlight-border: #{$o-action};
+    --KanbanColumn__highlight-selected: #d1ecf1;
+    --KanbanColumn__highlight-selected-border: #{tint-color($o-action, 60%)};
 
     --o-view-nocontent-zindex: 1;
 
