--- a/addons/stock/static/src/views/stock_orderpoint_list_view.xml
+++ b/addons/stock/static/src/views/stock_orderpoint_list_view.xml
@@ -2,7 +2,7 @@
 <templates id="template" xml:space="preserve">
 
     <t t-name="stock.StockOrderpoint.listView" t-inherit="web.ListView">
-        <xpath expr="//t[@t-call='web.ListView.Selection']" position="after">
+        <xpath expr="//SelectionBox" position="after">
             <Dropdown>
                 <button class="btn btn-secondary">
                     <span class="o_dropdown_title">Replenish</span>
